--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,10 @@ body {
     display: flex;
 }
 
+pre[class*=language-] {
+    background:#303030 !important;
+}
+
 #extension {
     padding-left: 2px;
     margin-top: 10px;
