--- a/blogs/tags_with_params/styles.css
+++ b/blogs/tags_with_params/styles.css
@@ -46,6 +46,10 @@ pre {
     white-space: pre-wrap;
 }
 
-code[class*="language-"], pre[class*="language-"] {
-    line-height: 0.8 !important;
+.token.local-tag {
+    color: #a6e22e;
+}
+
+.token.global-tag {
+    color: #f92672;
 }
